Fix state handling. know issues: players visibility state not yet implerment hp value in hp tracker cannot handle state

--- a/src/components/popover/popover.scss
+++ b/src/components/popover/popover.scss
@@ -1,8 +1,16 @@
 .popover-wrapper {
   display: flex;
-  gap: 5px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
+  overflow: hidden;
 
-  input[type="number"] {
-    width: 30px;
+  label {
+    display: flex;
+    gap: 5px;
+
+    input[type="number"] {
+      width: 40px;
+    }
   }
 }
