--- a/src/main.scss
+++ b/src/main.scss
@@ -37,7 +37,7 @@ h1 {
 }
 
 #app {
-  margin: 0 auto;
+  margin: auto;
   padding: 2rem;
   max-width: 1280px;
   text-align: center;
